--- a/cycletrack/app/src/main/AndroidManifest.xml
+++ b/cycletrack/app/src/main/AndroidManifest.xml
@@ -3,6 +3,7 @@
     package="uk.co.zoobyware.cycletrack">
 
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
 
     <application
         android:allowBackup="true"
